--- a/BOKiN/View/DisastersTableTopCell/DisastersTableTopCell.xib
+++ b/BOKiN/View/DisastersTableTopCell/DisastersTableTopCell.xib
@@ -1,21 +1,56 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DisastersTableTopCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="123" id="Ma9-SE-vfi" customClass="MainCharityTableViewCell" customModule="BOKiN_Prototype" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ma9-SE-vfi" id="DKK-LO-tb6">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="179.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disaster" translatesAutoresizingMaskIntoConstraints="NO" id="Xxx-Mt-zUs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="179.5"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018/08/25 15:20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uaR-a9-aH9">
+                        <rect key="frame" x="10" y="158.5" width="79" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="桂川町、道路水没！一部通行止め" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGm-6Y-YiA">
+                        <rect key="frame" x="10" y="136" width="275.5" height="21.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Xxx-Mt-zUs" secondAttribute="bottom" id="1lT-3R-YRZ"/>
+                    <constraint firstAttribute="bottom" secondItem="uaR-a9-aH9" secondAttribute="bottom" constant="10" id="8YL-SG-eI2"/>
+                    <constraint firstItem="AGm-6Y-YiA" firstAttribute="leading" secondItem="DKK-LO-tb6" secondAttribute="leading" constant="10" id="Erz-Ny-tbn"/>
+                    <constraint firstItem="uaR-a9-aH9" firstAttribute="top" secondItem="AGm-6Y-YiA" secondAttribute="bottom" constant="1" id="GMv-A3-fBf"/>
+                    <constraint firstItem="uaR-a9-aH9" firstAttribute="leading" secondItem="DKK-LO-tb6" secondAttribute="leading" constant="10" id="XWK-y9-vcI"/>
+                    <constraint firstItem="Xxx-Mt-zUs" firstAttribute="leading" secondItem="DKK-LO-tb6" secondAttribute="leading" id="Zfm-60-tH8"/>
+                    <constraint firstAttribute="trailing" secondItem="Xxx-Mt-zUs" secondAttribute="trailing" id="k38-P4-M8b"/>
+                    <constraint firstItem="Xxx-Mt-zUs" firstAttribute="top" secondItem="DKK-LO-tb6" secondAttribute="top" id="kTD-KZ-SgI"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="wmi-O7-F0n"/>
+            <point key="canvasLocation" x="29" y="-66"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="disaster" width="191.52000427246094" height="123.83999633789062"/>
+    </resources>
 </document>
