--- a/BOKiN/View/DisastersTableViewCell/DisastersTableViewCell.xib
+++ b/BOKiN/View/DisastersTableViewCell/DisastersTableViewCell.xib
@@ -1,21 +1,151 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DisastersTableViewCell" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DisastersTableViewCell" customModule="BOKiN" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
         </tableViewCell>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="13" id="nLH-cI-yvs" customClass="CharityTableViewCell" customModule="BOKiN_Prototype" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nLH-cI-yvs" id="hlC-LT-wOg">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bP8-vw-n5k">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1P-GB-NWd" userLabel="Image Wrapped View">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="79.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ogp" translatesAutoresizingMaskIntoConstraints="NO" id="rRQ-jv-hp6">
+                                        <rect key="frame" x="10" y="10" width="85" height="59.5"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="KVg-zf-bi6"/>
+                                    <constraint firstItem="rRQ-jv-hp6" firstAttribute="leading" secondItem="U1P-GB-NWd" secondAttribute="leading" constant="10" id="VI3-mb-0j9"/>
+                                    <constraint firstAttribute="bottom" secondItem="rRQ-jv-hp6" secondAttribute="bottom" constant="10" id="gam-fn-0zz"/>
+                                    <constraint firstItem="rRQ-jv-hp6" firstAttribute="top" secondItem="U1P-GB-NWd" secondAttribute="top" constant="10" id="h4I-OQ-R1u"/>
+                                    <constraint firstAttribute="trailing" secondItem="rRQ-jv-hp6" secondAttribute="trailing" constant="5" id="rtk-AT-9mq"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bzH-eZ-LDx">
+                                <rect key="frame" x="100" y="0.0" width="275" height="79.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVt-SP-KUL" userLabel="TitleWrapView">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="九州北部で未曽有の豪雨！" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMd-fR-ZHI">
+                                                <rect key="frame" x="5" y="10" width="245" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="TMd-fR-ZHI" firstAttribute="top" secondItem="FtO-2G-3jx" secondAttribute="top" constant="10" id="475-CE-9bs"/>
+                                            <constraint firstItem="TMd-fR-ZHI" firstAttribute="leading" secondItem="FtO-2G-3jx" secondAttribute="leading" constant="5" id="j2s-kJ-Gh3"/>
+                                            <constraint firstAttribute="height" constant="60" id="vnQ-VT-Yl7"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="safeArea" id="FtO-2G-3jx"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O1y-dc-GRB" userLabel="BottomWrapView">
+                                        <rect key="frame" x="0.0" y="60" width="275" height="19.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="uH0-JC-vXl">
+                                                <rect key="frame" x="2" y="2" width="275" height="15.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdk-Vv-qT1" userLabel="ClockIconWrapView">
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="15.5"/>
+                                                        <subviews>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="c4N-vO-2DH">
+                                                                <rect key="frame" x="2.5" y="-8" width="15" height="15"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="c4N-vO-2DH" secondAttribute="height" multiplier="1:1" id="Gg0-yV-OfK"/>
+                                                                    <constraint firstAttribute="width" constant="15" id="gcr-i5-HFS"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="Gsb-cn-AyA"/>
+                                                            <constraint firstItem="c4N-vO-2DH" firstAttribute="top" secondItem="rdk-Vv-qT1" secondAttribute="top" constant="-8" id="JXQ-4L-T72"/>
+                                                            <constraint firstItem="c4N-vO-2DH" firstAttribute="centerX" secondItem="rdk-Vv-qT1" secondAttribute="centerX" id="Xw7-oS-IfK"/>
+                                                        </constraints>
+                                                        <viewLayoutGuide key="safeArea" id="bKb-t9-wvx"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iCg-NC-z0C" userLabel="TimestampWrapView">
+                                                        <rect key="frame" x="23" y="0.0" width="252" height="15.5"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018/8/21 17:46" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dem-BP-07j">
+                                                                <rect key="frame" x="2" y="-9" width="91.5" height="14.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                <color key="textColor" red="0.71355488580000004" green="0.71355488580000004" blue="0.71355488580000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstItem="Dem-BP-07j" firstAttribute="leading" secondItem="crR-rp-LsZ" secondAttribute="leading" constant="2" id="NAX-dH-ZnO"/>
+                                                            <constraint firstItem="crR-rp-LsZ" firstAttribute="bottom" secondItem="Dem-BP-07j" secondAttribute="bottom" constant="10" id="wmK-bh-D2P"/>
+                                                        </constraints>
+                                                        <viewLayoutGuide key="safeArea" id="crR-rp-LsZ"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="uH0-JC-vXl" secondAttribute="bottom" constant="2" id="b0D-lM-hDH"/>
+                                            <constraint firstItem="uH0-JC-vXl" firstAttribute="leading" secondItem="RaH-GZ-fOx" secondAttribute="leading" constant="2" id="uYw-lJ-mNO"/>
+                                            <constraint firstItem="uH0-JC-vXl" firstAttribute="top" secondItem="O1y-dc-GRB" secondAttribute="top" constant="2" id="zDp-K0-CQ7"/>
+                                            <constraint firstItem="uH0-JC-vXl" firstAttribute="trailing" secondItem="RaH-GZ-fOx" secondAttribute="trailing" constant="2" id="zwp-Qc-wYO"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="safeArea" id="RaH-GZ-fOx"/>
+                                    </view>
+                                </subviews>
+                                <viewLayoutGuide key="safeArea" id="duS-Sq-231"/>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="U1P-GB-NWd" firstAttribute="leading" secondItem="bP8-vw-n5k" secondAttribute="leading" id="7Hk-PJ-ls4"/>
+                            <constraint firstItem="U1P-GB-NWd" firstAttribute="top" secondItem="bP8-vw-n5k" secondAttribute="top" id="B13-h6-dhj"/>
+                            <constraint firstAttribute="bottom" secondItem="U1P-GB-NWd" secondAttribute="bottom" id="qdx-YM-NAY"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="bP8-vw-n5k" secondAttribute="trailing" id="SFZ-vP-ih0"/>
+                    <constraint firstItem="bP8-vw-n5k" firstAttribute="top" secondItem="hlC-LT-wOg" secondAttribute="top" id="e1i-MU-snU"/>
+                    <constraint firstAttribute="bottom" secondItem="bP8-vw-n5k" secondAttribute="bottom" id="eb9-Qa-BpD"/>
+                    <constraint firstItem="bP8-vw-n5k" firstAttribute="leading" secondItem="hlC-LT-wOg" secondAttribute="leading" id="ko2-cf-6A1"/>
+                </constraints>
+            </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="MeP-MF-1xc"/>
+            <point key="canvasLocation" x="2900" y="-331"/>
+        </tableViewCell>
     </objects>
+    <resources>
+        <image name="ogp" width="288" height="197.82000732421875"/>
+        <image name="timeIcon" width="600" height="600"/>
+    </resources>
 </document>
