--- a/BOKiN/Storyboard/OriginalNewsSite.storyboard
+++ b/BOKiN/Storyboard/OriginalNewsSite.storyboard
@@ -42,6 +42,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="u3Z-aQ-3H0"/>
                     </view>
+                    <navigationItem key="navigationItem" id="G4q-Fz-cqP"/>
                     <connections>
                         <outlet property="progressBar" destination="Ovy-zP-W3L" id="bhV-Ke-gnY"/>
                         <outlet property="webView" destination="LT6-mf-My0" id="JUb-6u-jfQ"/>
@@ -49,7 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLP-up-Igo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="256.80000000000001" y="-301.79910044977515"/>
+            <point key="canvasLocation" x="1196" y="-301.79910044977515"/>
         </scene>
     </scenes>
 </document>
