--- a/BOKiN/View/SettlementModalView/SettlementModalView.storyboard
+++ b/BOKiN/View/SettlementModalView/SettlementModalView.storyboard
@@ -110,6 +110,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ouN-5y-Ix5">
                                                 <rect key="frame" x="0.0" y="366.5" width="375" height="30"/>
                                                 <state key="normal" title="募金する"/>
+                                                <connections>
+                                                    <action selector="donate:" destination="MbX-K7-Mwz" eventType="touchUpInside" id="tzB-Je-qsN"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5QW-CJ-dXJ">
                                                 <rect key="frame" x="0.0" y="396.5" width="375" height="30"/>
